# market-terminal

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  SPEC.md  circuit.py  concurrency.py  config.py  mcp_server.py  pyproject.toml  requirements-dev.txt  requirements-forecast.txt  requirements.txt
app/: auth.py  db.py  main.py  precache.py  schemas.py
cache/: __init__.py  store.py
docs/: data-providers.md  decisions.md  deploy-railway.md  fmp.md  handoff.md  kronos-integration.md  openalice-cloud-deploy.md  openalice-cursor-fallback.md  openalice-daily-runbook.md  openalice-multi-broker.md  openalice-prompts.md  openalice-workflow.md  openalice-wsl-setup.md  openalice.md  operator-guide.md  tradingview.md  vibe-trading.md
kronos_layer/: __init__.py  client.py  forecast.py  metrics.py  types.py
obb_layer/: __init__.py  alpaca.py  client.py  cot.py  flatfiles.py  fmp.py  fmp_curve.py  fmp_market.py  grouped.py  ibkr_symbols.py  llm.py  macro.py  market.py  news.py  normalize.py  probe.py  providers.py  screener.py  symbol_map.py  symbols.py  term_structure.py
scripts/: __init__.py  _data.py  eval_kronos.py  eval_vol.py  open-mcp-notepad.sh  openalice-claude-or-cursor.sh  openalice-use-cursor.sh  probe_providers.py
services/: __init__.py  alerts.py  analysis.py  brain.py  brain_common.py  brain_crypto.py  brain_forex.py  cot.py  custom_store.py  custom_watchlist.py  decision_brief.py  doctor.py  filings.py  fundamentals.py  history.py  instruments.py  macro.py  market_setup.py  movers.py  news.py  news_pulse.py  ownership.py  (+7 more)
(+68 files in other folders)
